# telephone-fastapi-redis

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  second-task.md
src/: app.py  dependency.py  lifespan.py  settings.py
src/api/: router.py
src/api/phone/: __init__.py  schema.py  views.py
