[project]
name = "telephone-fastapi-redis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.124.2",
    "phonenumbers>=9.0.20",
    "pydantic>=2.12.5",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "uvicorn>=0.38.0",
]
